--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "express-fileupload": "^1.2.1",
+    "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "path": "^0.12.7",
+    "stream": "0.0.2"
   }
 }
