--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "stream": "0.0.2"
   }
