--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
-
-    "bulma": "^0.9.2",
-    "cookie-parser": "^1.4.5",
-    "debug": "^2.6.9",
-    "express": "^4.16.4",
-    "hbs": "^4.0.6",
-    "http-errors": "^1.6.3",
-    "morgan": "^1.9.1",
-    "mysql": "^2.18.1"
-
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
     "hbs": "^4.0.6",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "stream": "0.0.2"
   }
