--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "dev_nix": "NODE_ENV=development nodemon ./bin/www"
   },
   "dependencies": {
+    "@emotion/cache": "^11.4.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.2",
+    "@mui/x-data-grid": "^5.0.0-beta.3",
+    "@types/react-plotly.js": "^2.5.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -16,8 +24,19 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "next": "^11.1.2",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
+    "plotly.js": "^2.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "stream": "0.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.27",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
+    "typescript": "^4.4.3"
   }
 }
